<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:id="@+id/appTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/logo"
                android:layout_toRightOf="@+id/logo"
                android:paddingLeft="10dp"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/appSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/appTitle"
                android:layout_toEndOf="@+id/logo"
                android:layout_toRightOf="@+id/logo"
                android:paddingLeft="10dp"
                android:text="Application to tune parameters in OpModes in real time"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="?android:attr/listDivider"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="Version:"/>

                <View
                    android:layout_width="10dp"
                    android:layout_height="10dp"/>

                <TextView
                    android:id="@+id/version"
                    android:text="0.22-alpha"/>
            </TableRow>

            <TableRow>

                <TextView
                    android:text="Last updated:"/>

                <View
                    android:layout_width="10dp"
                    android:layout_height="10dp"/>

                <TextView
                    android:id="@+id/lastUpdated"
                    android:text="4 June 2018"/>
            </TableRow>

        </TableLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="?android:attr/listDivider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/openftc_logo_high_res"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/openftc_project"/>

                <Button
                    android:id="@+id/openFtcOnGithubBtn"
                    android:layout_gravity="center_horizontal"
                    android:text="OpenFTC on GitHub"
                    android:textAllCaps="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="?android:attr/listDivider"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_license"/>

        <Button
            android:id="@+id/openSourceLicensesBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Open Source Licenses"/>

    </LinearLayout>


</ScrollView>

